--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "ineuron",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "index.ts",
   "scripts": {
     "test": " cross-env NODE_ENV=test jest",
-    "start": "cross-env NODE_ENV=dev ts-node-dev --respawn --pretty --transpile-only src/index.ts",
+    "start": "cross-env NODE_ENV=dev ts-node-dev --respawn --pretty --transpile-only index.ts",
     "build": "rm -rf build && tsc  "
   },
   "keywords": [],
